Added spellkeeper planks, also reworked the model registration with IHasModel interface

--- a/src/main/resources/assets/pemc/lang/en_us.lang
+++ b/src/main/resources/assets/pemc/lang/en_us.lang
@@ -1,3 +1,6 @@
 tile.ore_overworld_asmil.name=Asmil Ore
 item.nugget_asmil.name=Asmil Nugget
 item.ingot_asmil.name=Asmil Ingot
+
+tile.log_spellkeeper.name=Spellkeeper Log
+tile.plank_spellkeeper.name=Spellkeeper Planks
